# geodispbench3d

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  AGENTS.md  CHANGELOG.md  CITATION.cff  LICENSE  OVERVIEW.md  README.md  pyproject.toml  pyrightconfig.json  release-please-config.json
.claude/: CLAUDE.md
.github/actions/setup-python-deps/: action.yml
.github/rulesets/: README.md  protect-develop.json  protect-main.json
.github/scripts/: apply-rulesets.sh  check_ci_ruleset_contexts.py  check_publish_gate.py  check_release_preflight.py
.github/workflows/: ci.yml  publish-pypi.yml  publish-testpypi.yml  release-please.yml
.planning/: MILESTONES.md  PROJECT.md  REQUIREMENTS.md  RETROSPECTIVE.md  ROADMAP.md  SHIP-EXCLUDES.md  STATE.md  config.json
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.planning/milestones/: v0.2-REQUIREMENTS.md  v0.2-ROADMAP.md
.planning/phases/01-code-health-audit/: 01-01-PLAN.md  01-01-SUMMARY.md  01-02-PLAN.md  01-02-SUMMARY.md  01-CONTEXT.md  01-DISCUSSION-LOG.md  01-REVIEWS.md  01-SECURITY.md  01-VERIFICATION.md  EVIDENCE.md  REPORT.md
.planning/phases/01-code-health-audit/audit-evidence/: README.md  coverage-skips.txt  coverage.txt  deptry.txt  radon-cc.txt  radon-mi.txt  ruff-c901.txt  vulture.txt
.planning/phases/02-targeted-fixes/: 02-01-PLAN.md  02-01-SUMMARY.md  02-02-PLAN.md  02-02-SUMMARY.md  02-03-PLAN.md  02-03-SUMMARY.md  02-04-PLAN.md  02-04-SUMMARY.md  02-05-PLAN.md  02-05-SUMMARY.md  02-06-PLAN.md  02-06-SUMMARY.md  02-07-PLAN.md  02-07-SUMMARY.md  02-CONTEXT.md  02-DISCUSSION-LOG.md  02-RESEARCH.md  02-REVIEW.md  02-REVIEWS.md  02-SECURITY.md  02-UAT.md  02-VALIDATION.md  02-VERIFICATION.md  PYRIGHT-BASELINE.md  pyright-baseline.json  pyright_gate.py
.planning/phases/03-cli-hardening/: 03-01-PLAN.md  03-01-SUMMARY.md  03-02-PLAN.md  03-02-SUMMARY.md  03-03-PLAN.md  03-03-SUMMARY.md  03-04-PLAN.md  03-04-SUMMARY.md  03-CONTEXT.md  03-DISCUSSION-LOG.md  03-PATTERNS.md  03-RESEARCH.md  03-REVIEW-FIX.md  03-REVIEW.md  03-REVIEWS.md  03-SECURITY.md  03-UAT.md  03-VALIDATION.md  03-VERIFICATION.md
.planning/phases/04-licensing-metadata-packaging/: 04-01-PLAN.md  04-01-SUMMARY.md  04-02-PLAN.md  04-02-SUMMARY.md  04-CONTEXT.md  04-DISCUSSION-LOG.md  04-RESEARCH.md  04-REVIEW.md  04-REVIEWS.md  04-SECURITY.md  04-UAT.md  04-VALIDATION.md  04-VERIFICATION.md  deferred-items.md
.planning/phases/05-ci-cd-release/: 05-01-PLAN.md  05-01-SUMMARY.md  05-02-PLAN.md  05-02-SUMMARY.md  05-03-PLAN.md  05-03-SUMMARY.md  05-04-PLAN.md  05-04-SUMMARY.md  05-05-PLAN.md  05-05-SUMMARY.md  05-06-PLAN.md  05-06-SUMMARY.md  05-CONTEXT.md  05-DISCUSSION-LOG.md  05-PATTERNS.md  05-PAUSE-wave4.md  05-RESEARCH.md  05-REVIEWS.md  05-VALIDATION.md  05-VERIFICATION.md
.planning/quick/260626-jix-create-overview-md-one-pager-for-eth-ope/: 260626-jix-PLAN.md  260626-jix-SUMMARY.md
.planning/quick/260706-io3-iof3d-research-contact-note/: 260706-io3-PLAN.md  260706-io3-SUMMARY.md
.planning/quick/260707-clc-exclude-claude-md-from-main/: 260707-clc-PLAN.md  260707-clc-SUMMARY.md
.planning/quick/260707-rmd-remove-agents-overview-from-main/: 260707-rmd-PLAN.md  260707-rmd-SUMMARY.md
.planning/seeds/: SEED-001-interactive-timeout-watchdog.md
benchmarks/data/: mattertal_gt.csv
benchmarks/datasets/: mattertal.yaml  mattertal_f2s3.yaml
benchmarks/metrics/: pointing_error.yaml
benchmarks/suites/: f2s3_voxel_refine.yaml  iof3d_mattertal.yaml
docs/: concepts.md  index.md  quickstart.md  rescoring-and-analysis.md
docs/integrating/: cli-tool.md  datasets.md  factory.md  index.md  metrics.md  output-parsers.md  python-callable.md
docs/reference/: yaml-schemas.md
docs/source/: concepts.md  conf.py  index.md  quickstart.md  rescoring-and-analysis.md
docs/source/integrating/: custom-adapter.md  datasets.md  index.md  metrics.md
docs/source/reference/: yaml-schemas.md
docs/source/tools/: f2s3.md  iof3d.md
docs/tools/: f2s3.md  iof3d.md
src/geodispbench3d/: __init__.py  cli.py  diagnostics.py
src/geodispbench3d/analysis/: __init__.py  loader.py  runner.py
src/geodispbench3d/conf/schema/: analysis.schema.json  dataset.schema.json  metrics.schema.json  suite.schema.json  tool.schema.json
src/geodispbench3d/dashboard/: __init__.py  app.py
src/geodispbench3d/dataset/: __init__.py  ground_truth.py  schema.py
src/geodispbench3d/metrics/: __init__.py  builtins.py  registry.py
src/geodispbench3d/results/: __init__.py  predictions_cache.py  store.py
src/geodispbench3d/suite/: __init__.py  loader.py
src/geodispbench3d/sweep/: __init__.py  evaluation.py  parameters.py  rescore.py  runner.py  trial_record.py
src/geodispbench3d/tool/: __init__.py  base.py  callable_adapter.py  cli_adapter.py  loader.py
src/geodispbench3d_f2s3/: __init__.py  output_parser.py
src/geodispbench3d_f2s3/conf/tool/: f2s3.yaml
src/geodispbench3d_iof3d/: __init__.py  _sweep_cli.py  adapter.py  cli.py  factory.py  output_parser.py
src/geodispbench3d_iof3d/conf/: config_ax.yaml
src/geodispbench3d_iof3d/conf/tool/: iof3d.yaml
tests/: conftest.py
tests/core/: test_analyze.py  test_cli.py  test_cli_adapter.py  test_evaluation.py  test_imports.py  test_iof3d_import_guard.py  test_loaders.py  test_metrics_builtins.py  test_packaging_metadata.py  test_parameters.py  test_predictions_cache.py  test_rescore.py  test_runner.py  test_runner_failure.py  test_store.py
tests/f2s3/: conftest.py  test_parser.py
tests/iof3d/: conftest.py  test_adapter.py
