[build-system]
requires = ["setuptools", "setuptools_scm"]
build-backend = "setuptools.build_meta"

[project]
name = "geodispbench3d"
description = "Benchmark framework for 3D displacement / optical-flow tools, with Bayesian hyperparameter sweeps and pluggable adapters."
requires-python = "~=3.11"
keywords = ["benchmark", "point-cloud", "optical-flow", "displacement", "ax", "hydra"]
license = { text = "Proprietary" }
authors = [
    { name = "Nicholas Meyer" },
    { email = "meyernic@ethz.ch" },
]
dynamic = ["version", "readme"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Private :: Do Not Upload",  # remove before publishing
]
dependencies = [
    "numpy ~= 2.0",
    "pandas",
    "omegaconf ~= 2.3",
    "hydra-core ~= 1.3",
    "ax-platform ~= 1.1",
]

[project.urls]
homepage = "https://gseg.igp.ethz.ch/"
repository = "https://github.com/gseg-ethz/geodispbench3d"
issues = "https://github.com/gseg-ethz/geodispbench3d/issues"

[project.scripts]
geodispbench3d = "geodispbench3d.cli:main"
iof3d-ax = "geodispbench3d_iof3d.cli:main"

[project.optional-dependencies]
# Streamlit-based results dashboard + duckdb for ad-hoc parquet querying.
dashboard = [
    "streamlit ~= 1.41",
    "altair ~= 5.4",
    "duckdb ~= 1.4",
]
# iof3D adapter: imports iof3D at module level, so installing this extra
# pulls iof3D's full pipeline stack (torch, ptlflow, opencv, ...) transitively.
iof3d = [
    "iof3D ~= 0.1",
    "pchandler",
    "pc2img",
]
# F2S3 adapter: today drives F2S3 via subprocess against a separate conda env,
# but F2S3 is also installable as a Python library (gseg-ethz/F2S3_pc_deformation_monitoring).
# Listed for symmetry; the adapter itself works without it (subprocess invocation).
f2s3 = []
dev = [
    "black ~= 25.1",
    "isort ~= 6.0",
    "flake8 ~= 7.3",
    "flake8-bugbear",
    "flake8-docstrings",
    "mypy ~= 1.17",
    "pre-commit ~= 4.3",
    "pytest ~= 8.4",
    "coverage ~= 7.0",
]
docs = ["sphinx ~= 5.1"]

[tool.setuptools]
package-dir = { "" = "src" }
packages = [
    "geodispbench3d",
    "geodispbench3d.tool",
    "geodispbench3d.dataset",
    "geodispbench3d.metrics",
    "geodispbench3d.sweep",
    "geodispbench3d.suite",
    "geodispbench3d.results",
    "geodispbench3d.dashboard",
    "geodispbench3d_iof3d",
    "geodispbench3d_f2s3",
]
include-package-data = true

[tool.setuptools.package-data]
"geodispbench3d" = ["conf/**/*.yaml", "conf/**/*.json"]
"geodispbench3d_iof3d" = ["conf/**/*.yaml"]
"geodispbench3d_f2s3" = ["conf/**/*.yaml"]

[tool.setuptools.dynamic]
readme = { file = ["README.md"], content-type = "text/markdown" }

[tool.setuptools_scm]
write_to = "src/geodispbench3d/_version.py"
local_scheme = "no-local-version"
version_scheme = "post-release"
fallback_version = "0.1.0"
tag_regex = '^v?(?P<version>\d+\.\d+\.\d+(?:(?:a|b|rc)\d+)?(?:\.post\d+)?(?:\.dev\d+)?)$'
git_describe_command = [
    "git", "describe", "--dirty", "--tags", "--long", "--match", "v[0-9]*.[0-9]*.[0-9]*",
]
